# razer-battery-report

./: Cargo.toml  LICENSE  README.md
assets/: mouse.psd
src/: console.rs  controller.rs  devices.rs  main.rs  manager.rs  tray.rs  watchman.rs
