[package]
name = "razer-battery-report"
version = "0.1.0"
authors = ["xzeldon <contact@zeldon.ru>"]
edition = "2021"
description = "Razer Battery Level Tray Indicator"

# Slower builds, faster executables
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
# Communicate with HID devices
hidapi = "2.6.3"

# Logging
log = "0.4.22"
pretty_env_logger = "0.5.0"
