[package]
name = "razer-battery-report"
version = "0.2.0"
authors = ["xzeldon <contact@zeldon.ru>"]
edition = "2021"
description = "Razer Battery Level Tray Indicator"

# Slower builds, faster executables
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
# Communicate with HID devices
hidapi = "2.6.3"

# Logging
log = "0.4.22"
pretty_env_logger = "0.5.0"

# Event Loop and Tray Icon
tao = "0.30.0"
tray-icon = "0.17.0"

# Image manipulation
image = "0.25.2"

# Windows API
winapi = { version = "0.3.9", features = ["winuser", "wincon", "consoleapi"] }
